[package]
name = "character-service"
version = "0.1.0"
authors = ["Ben Ukhanov"]
edition = "2018"

[dependencies]
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15"