[package]
name = "character-service"
version = "0.1.0"
authors = ["Ben Oukhanov <hello@codingben.io>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
libsqlite3-sys = { version = "*", features = ["bundled"] }
openssl = "*"
openssl-probe = "0.1.2"
dotenv = "0.15"
env_logger = "0.8.2"