[package]
name = "gameprovider-service"
version = "0.1.0"
authors = ["Ben Ukhanov"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.52"
tonic = "0.2"
prost = "0.6.1"
tokio = { version = "0.2.20", features = ["macros"] }
dotenv = "0.15"

[build-dependencies]
tonic-build = "0.2"