[package]
name = "gameprovider-service"
version = "0.1.0"
authors = ["Ben Oukhanov <hello@codingben.io>"]
edition = "2018"

[dependencies]
actix-web = "4"
dotenv = "0.15"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
tokio = "1"
reqwest = "0.11"